// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Queries Challenge should return all challenges 1`] = `
Object {
  "data": Object {
    "getChallenges": Array [
      Object {
        "challengeSeed": "'use strict'",
        "content": "John is playing with his friends in the park",
        "contest": Object {
          "challenges": Array [
            Object {
              "id": "5eaa7d1effd50d33c34637a8",
            },
            Object {
              "id": "5eaa7f442db1ce3470fa16cc",
            },
          ],
          "id": "5eaa779bf4dcc728b76b00bb",
          "name": "Sherlock Homes",
        },
        "id": "5eaa7d1effd50d33c34637a8",
        "level": "easy",
        "passedUser": Array [
          Object {
            "firstname": "kenny",
            "id": "5eaa773df4dcc728b76b00b7",
            "lastname": "uchiha",
            "likedChallenges": Array [
              Object {
                "id": "5eaa7d1effd50d33c34637a8",
              },
            ],
            "solvedChallenges": Array [
              Object {
                "id": "5eaa7d1effd50d33c34637a8",
              },
            ],
            "totalPoints": 0,
            "username": "kenny",
          },
        ],
        "points": 100,
        "testCases": Array [
          Object {
            "testString": "assert.strictEqual(result,10)",
            "text": "Must be 10",
          },
        ],
        "testInputs": Array [
          "3\\\\n1 2 10",
        ],
        "title": "Find max",
      },
      Object {
        "challengeSeed": "'use strict'",
        "content": "John is playing with his friends in the park",
        "contest": Object {
          "challenges": Array [
            Object {
              "id": "5eaa7d1effd50d33c34637a8",
            },
            Object {
              "id": "5eaa7f442db1ce3470fa16cc",
            },
          ],
          "id": "5eaa779bf4dcc728b76b00bb",
          "name": "Sherlock Homes",
        },
        "id": "5eaa7f442db1ce3470fa16cc",
        "level": "easy",
        "passedUser": Array [],
        "points": 100,
        "testCases": Array [
          Object {
            "testString": "assert.strictEqual(result,1)",
            "text": "Must be 1",
          },
        ],
        "testInputs": Array [
          "3\\\\n1 2 10",
        ],
        "title": "Find min",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries Challenge should return single challenge with provided ID 1`] = `
Object {
  "data": Object {
    "getChallenge": Object {
      "challengeSeed": "'use strict'",
      "content": "John is playing with his friends in the park",
      "contest": Object {
        "challenges": Array [
          Object {
            "id": "5eaa7d1effd50d33c34637a8",
          },
          Object {
            "id": "5eaa7f442db1ce3470fa16cc",
          },
        ],
        "id": "5eaa779bf4dcc728b76b00bb",
        "name": "Sherlock Homes",
      },
      "id": "5eaa7d1effd50d33c34637a8",
      "level": "easy",
      "passedUser": Array [
        Object {
          "firstname": "kenny",
          "id": "5eaa773df4dcc728b76b00b7",
          "lastname": "uchiha",
          "likedChallenges": Array [
            Object {
              "id": "5eaa7d1effd50d33c34637a8",
            },
          ],
          "solvedChallenges": Array [
            Object {
              "id": "5eaa7d1effd50d33c34637a8",
            },
          ],
          "totalPoints": 0,
          "username": "kenny",
        },
      ],
      "points": 100,
      "testCases": Array [
        Object {
          "testString": "assert.strictEqual(result,10)",
          "text": "Must be 10",
        },
      ],
      "testInputs": Array [
        "3\\\\n1 2 10",
      ],
      "title": "Find max",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries Contest should return all contests 1`] = `
Object {
  "data": Object {
    "getContests": Array [
      Object {
        "challenges": Array [],
        "id": "5eaa7772f4dcc728b76b00b8",
        "name": "Warm up!",
      },
      Object {
        "challenges": Array [],
        "id": "5eaa7780f4dcc728b76b00b9",
        "name": "Solve the function",
      },
      Object {
        "challenges": Array [],
        "id": "5eaa7787f4dcc728b76b00ba",
        "name": "The big map",
      },
      Object {
        "challenges": Array [
          Object {
            "challengeSeed": "'use strict'",
            "content": "John is playing with his friends in the park",
            "contest": Object {
              "challenges": Array [
                Object {
                  "id": "5eaa7d1effd50d33c34637a8",
                },
                Object {
                  "id": "5eaa7f442db1ce3470fa16cc",
                },
              ],
              "id": "5eaa779bf4dcc728b76b00bb",
              "name": "Sherlock Homes",
            },
            "id": "5eaa7d1effd50d33c34637a8",
            "level": "easy",
            "passedUser": Array [
              Object {
                "firstname": "kenny",
                "id": "5eaa773df4dcc728b76b00b7",
                "lastname": "uchiha",
                "likedChallenges": Array [
                  Object {
                    "id": "5eaa7d1effd50d33c34637a8",
                  },
                ],
                "solvedChallenges": Array [
                  Object {
                    "id": "5eaa7d1effd50d33c34637a8",
                  },
                ],
                "totalPoints": 0,
                "username": "kenny",
              },
            ],
            "points": 100,
            "testCases": Array [
              Object {
                "testString": "assert.strictEqual(result,10)",
                "text": "Must be 10",
              },
            ],
            "testInputs": Array [
              "3\\\\n1 2 10",
            ],
            "title": "Find max",
          },
          Object {
            "challengeSeed": "'use strict'",
            "content": "John is playing with his friends in the park",
            "contest": Object {
              "challenges": Array [
                Object {
                  "id": "5eaa7d1effd50d33c34637a8",
                },
                Object {
                  "id": "5eaa7f442db1ce3470fa16cc",
                },
              ],
              "id": "5eaa779bf4dcc728b76b00bb",
              "name": "Sherlock Homes",
            },
            "id": "5eaa7f442db1ce3470fa16cc",
            "level": "easy",
            "passedUser": Array [],
            "points": 100,
            "testCases": Array [
              Object {
                "testString": "assert.strictEqual(result,1)",
                "text": "Must be 1",
              },
            ],
            "testInputs": Array [
              "3\\\\n1 2 10",
            ],
            "title": "Find min",
          },
        ],
        "id": "5eaa779bf4dcc728b76b00bb",
        "name": "Sherlock Homes",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries Contest should return single contest with provided ID 1`] = `
Object {
  "data": Object {
    "getContest": Object {
      "challenges": Array [
        Object {
          "challengeSeed": "'use strict'",
          "content": "John is playing with his friends in the park",
          "contest": Object {
            "challenges": Array [
              Object {
                "id": "5eaa7d1effd50d33c34637a8",
              },
              Object {
                "id": "5eaa7f442db1ce3470fa16cc",
              },
            ],
            "id": "5eaa779bf4dcc728b76b00bb",
            "name": "Sherlock Homes",
          },
          "id": "5eaa7d1effd50d33c34637a8",
          "level": "easy",
          "passedUser": Array [
            Object {
              "firstname": "kenny",
              "id": "5eaa773df4dcc728b76b00b7",
              "lastname": "uchiha",
              "likedChallenges": Array [
                Object {
                  "id": "5eaa7d1effd50d33c34637a8",
                },
              ],
              "solvedChallenges": Array [
                Object {
                  "id": "5eaa7d1effd50d33c34637a8",
                },
              ],
              "totalPoints": 0,
              "username": "kenny",
            },
          ],
          "points": 100,
          "testCases": Array [
            Object {
              "testString": "assert.strictEqual(result,10)",
              "text": "Must be 10",
            },
          ],
          "testInputs": Array [
            "3\\\\n1 2 10",
          ],
          "title": "Find max",
        },
        Object {
          "challengeSeed": "'use strict'",
          "content": "John is playing with his friends in the park",
          "contest": Object {
            "challenges": Array [
              Object {
                "id": "5eaa7d1effd50d33c34637a8",
              },
              Object {
                "id": "5eaa7f442db1ce3470fa16cc",
              },
            ],
            "id": "5eaa779bf4dcc728b76b00bb",
            "name": "Sherlock Homes",
          },
          "id": "5eaa7f442db1ce3470fa16cc",
          "level": "easy",
          "passedUser": Array [],
          "points": 100,
          "testCases": Array [
            Object {
              "testString": "assert.strictEqual(result,1)",
              "text": "Must be 1",
            },
          ],
          "testInputs": Array [
            "3\\\\n1 2 10",
          ],
          "title": "Find min",
        },
      ],
      "id": "5eaa779bf4dcc728b76b00bb",
      "name": "Sherlock Homes",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries User should return all users 1`] = `
Object {
  "data": Object {
    "getUsers": Array [
      Object {
        "firstname": "kenny",
        "id": "5eaa773df4dcc728b76b00b7",
        "lastname": "uchiha",
        "likedChallenges": Array [
          Object {
            "content": "John is playing with his friends in the park",
            "contest": Object {
              "challenges": Array [
                Object {
                  "id": "5eaa7d1effd50d33c34637a8",
                  "title": "Find max",
                },
                Object {
                  "id": "5eaa7f442db1ce3470fa16cc",
                  "title": "Find min",
                },
              ],
              "id": "5eaa779bf4dcc728b76b00bb",
              "name": "Sherlock Homes",
            },
            "id": "5eaa7d1effd50d33c34637a8",
            "level": "easy",
            "passedUser": Array [
              Object {
                "firstname": "kenny",
                "id": "5eaa773df4dcc728b76b00b7",
                "lastname": "uchiha",
                "totalPoints": 0,
                "username": "kenny",
              },
            ],
            "points": 100,
            "title": "Find max",
          },
        ],
        "solvedChallenges": Array [
          Object {
            "content": "John is playing with his friends in the park",
            "contest": Object {
              "challenges": Array [
                Object {
                  "id": "5eaa7d1effd50d33c34637a8",
                  "title": "Find max",
                },
                Object {
                  "id": "5eaa7f442db1ce3470fa16cc",
                  "title": "Find min",
                },
              ],
              "id": "5eaa779bf4dcc728b76b00bb",
              "name": "Sherlock Homes",
            },
            "id": "5eaa7d1effd50d33c34637a8",
            "level": "easy",
            "passedUser": Array [
              Object {
                "firstname": "kenny",
                "id": "5eaa773df4dcc728b76b00b7",
                "lastname": "uchiha",
                "totalPoints": 0,
                "username": "kenny",
              },
            ],
            "points": 100,
            "title": "Find max",
          },
        ],
        "totalPoints": 0,
        "username": "kenny",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries User should return single user with provided ID 1`] = `
Object {
  "data": Object {
    "getUser": Object {
      "firstname": "kenny",
      "id": "5eaa773df4dcc728b76b00b7",
      "lastname": "uchiha",
      "likedChallenges": Array [
        Object {
          "content": "John is playing with his friends in the park",
          "contest": Object {
            "challenges": Array [
              Object {
                "id": "5eaa7d1effd50d33c34637a8",
                "title": "Find max",
              },
              Object {
                "id": "5eaa7f442db1ce3470fa16cc",
                "title": "Find min",
              },
            ],
            "id": "5eaa779bf4dcc728b76b00bb",
            "name": "Sherlock Homes",
          },
          "id": "5eaa7d1effd50d33c34637a8",
          "level": "easy",
          "passedUser": Array [
            Object {
              "firstname": "kenny",
              "id": "5eaa773df4dcc728b76b00b7",
              "lastname": "uchiha",
              "totalPoints": 0,
              "username": "kenny",
            },
          ],
          "points": 100,
          "title": "Find max",
        },
      ],
      "solvedChallenges": Array [
        Object {
          "content": "John is playing with his friends in the park",
          "contest": Object {
            "challenges": Array [
              Object {
                "id": "5eaa7d1effd50d33c34637a8",
                "title": "Find max",
              },
              Object {
                "id": "5eaa7f442db1ce3470fa16cc",
                "title": "Find min",
              },
            ],
            "id": "5eaa779bf4dcc728b76b00bb",
            "name": "Sherlock Homes",
          },
          "id": "5eaa7d1effd50d33c34637a8",
          "level": "easy",
          "passedUser": Array [
            Object {
              "firstname": "kenny",
              "id": "5eaa773df4dcc728b76b00b7",
              "lastname": "uchiha",
              "totalPoints": 0,
              "username": "kenny",
            },
          ],
          "points": 100,
          "title": "Find max",
        },
      ],
      "totalPoints": 0,
      "username": "kenny",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
